feat(upPom): Updated dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
 			<version>3.0.9</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 		<!--dependencies spring-->
 	</dependencies>
